--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
   <header>
     <p>Meet Our Team</p>
   </header>
+
+  <main>
+    <div class="container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolores nam quam iure aut quasi veritatis id doloribus, quia quidem voluptate laudantium quaerat, quas molestias amet eos ullam corrupti veniam?</p>
+    </div>
+  </main>
+
 </body>
 </html>
