--- a/index.html
+++ b/index.html
@@ -16,8 +16,35 @@
 
   <main>
     <div class="container">
+
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolores nam quam iure aut quasi veritatis id doloribus, quia quidem voluptate laudantium quaerat, quas molestias amet eos ullam corrupti veniam?</p>
-    </div>
+
+      <div class="cards clearfix">
+
+        <div class="card-box float-left">
+          <div class="card-image"></div>
+          <div class="card-text"></div>
+        </div>
+  
+        <div class="card-box float-left">
+          <div class="card-image"></div>
+          <div class="card-text"></div>
+        </div>
+  
+        <div class="card-box float-left">
+          <div class="card-image"></div>
+          <div class="card-text"></div>
+        </div>
+  
+        <div class="card-box float-left">
+          <div class="card-image"></div>
+          <div class="card-text"></div>
+        </div>
+
+      </div><!-- fine cards -->
+
+    </div><!-- fine container -->
+
   </main>
 
 </body>
