--- a/index.html
+++ b/index.html
@@ -22,25 +22,16 @@
       <div class="cards clearfix">
 
         <div class="card-box float-left">
-          <div class="card-image"></div>
-          <div class="card-text"></div>
+          <div class="card-image">
+            <img src="img/male1.png" alt="male1">
+          </div>
+          <div class="card-text">
+            <span>Marco Bianchi</span>
+            <span>Designer</span>
+            <span>marcobianchi@team.com</span>
+          </div>
         </div>
   
-        <div class="card-box float-left">
-          <div class="card-image"></div>
-          <div class="card-text"></div>
-        </div>
-  
-        <div class="card-box float-left">
-          <div class="card-image"></div>
-          <div class="card-text"></div>
-        </div>
-  
-        <div class="card-box float-left">
-          <div class="card-image"></div>
-          <div class="card-text"></div>
-        </div>
-
       </div><!-- fine cards -->
 
     </div><!-- fine container -->
